--- a/vaultwarden.conf
+++ b/vaultwarden.conf
@@ -22,27 +22,27 @@ BACKUPS_PURGE_DAYS="60"
 
 ####### Configuración de los backups encriptados (opcional)
 
-# Directorio raíz de los backups encriptados de vaultwarden
+# Directorio raíz de los backups encriptados de vaultwarden (opcional)
 
 ENCRYPTED_BACKUPS_ROOT="/path/to/vaultwarden/encrypted/backups"
 
-# Contraseña de encriptación
+# Contraseña de encriptación (obligatoria si se especifica un directorio para los backups encriptados)
 
 ENCRYPTION_PASSPHRASE="**********************"
 
-# Algoritmo de encriptación
+# Algoritmo de encriptación (obligatorio si se especifica un directorio para los backups encriptados)
 
 ENCRYPTION_CIPHER_ALGORITHM="AES256"
 
-# Propietario y grupo del archivo de backup encriptado (opcional)
+# Propietario y grupo del archivo de backup encriptado (opcional en cualquier caso)
 
 ENCRYPTED_BACKUPS_OWNER="user.group"
 
-# Tiempo (en días) tras los cuales se eliminará automáticamente un backup encriptado (opcional)
+# Tiempo (en días) tras los cuales se eliminará automáticamente un backup encriptado (opcional en cualquier caso)
 
 ENCRYPTED_BACKUPS_PURGE_DAYS="60"
 
-# Booleano (0/1) indicando si se ha de validar la encriptación (opcional)
+# Booleano (0/1) indicando si se ha de validar la encriptación (opcional en cualquier caso)
 
 CHECK_ENCRIPTED_BACKUP="1"
 
